fixed loading not showing when no user is logged in

--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,12 @@ body {
   border: 0.1em solid black;
   border-radius: 0.5em;
   width: 80%;
-  margin: 3em 10%;
+  margin: 1.5em 10%;
+}
+
+.articleCard a {
+  width: 98%;
+  padding-left: 2%;
 }
 
 .articleCardVotes {
@@ -177,6 +182,7 @@ body {
   padding: 1em;
   background-color: rgb(240, 240, 240);
 }
+
 .articleCardVotes h3 {
   margin: 0.3em auto;
 }
@@ -185,7 +191,8 @@ body {
   display: flex;
   align-content: center;
   flex-direction: column;
-  margin-left: 2em;
+  /* margin-left: 2em; */
+  width: 100%;
 }
 
 .articleCard a {
@@ -225,7 +232,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-size: 1.5em;
   display: flex;
   background-color: #c51431;
@@ -302,6 +309,7 @@ body {
 }
 
 .sortBar {
+  font-size: 0.8em;
   width: 80%;
   margin: 1em 10%;
   display: flex;
